learn-kubernetes-minikube/exemples-network-policies/ex-01-k8s-netpol-demo/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-netpol

---
apiVersion: v1
kind: Namespace
metadata:
  name: other
