learn-kubernetes-minikube/exemples-network-policies/ex-01-k8s-netpol-demo/10-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: demo-netpol
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: echo 
          image: hashicorp/http-echo:0.2.3
          args: ["-text=Hello from backend", "-listen=:8081"]
          ports:
            - containerPort: 8081
