learn-kubernetes-minikube/exemples-network-policies/ex-01-k8s-netpol-demo/30-client-other.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-client
  namespace: other
spec: 
  containers:
    - name: busybox
      image: busybox
      command: ["sleep", "3600"]
      imagePullPolicy: IfNotPresent
  restartPolicy: Always
