learn-kubernetes-minikube/exemples-network-policies/ex-01-k8s-netpol-demo/11-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: demo-netpol
spec: 
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
