learn-kubernetes-minikube/exemples-network-policies/ex-01-k8s-netpol-demo/40-networkpolicy-backend-only-from-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: allow-from-frontend
  namespace: demo-netpol
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from: 
      - podSelector:
          matchLabels:
            app: frontend
      ports:
        - protocol: TCP
          port: 8081 
  egress:
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
